kubernetes/apps/flux-system/flux-config/github/webhooks/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: flux-webhook.nlecoy.fr
    external-dns.alpha.kubernetes.io/ttl: "120"
spec:
  rules:
    - host: flux-webhook.nlecoy.fr
      http:
        paths:
        - pathType: Prefix
          path: /hook/
          backend:
            service:
              name: webhook-receiver
              port:
                number: 80
  tls:
    - secretName: nlecoy-fr-tls
      hosts:
        - flux-webhook.nlecoy.fr
